credit to joecat he helped me fix post bug on incoming donations yay! also recoloured carousel nav buttons for index so they are actually visible and fixed card image scaling on live search return function (card still had inline css styling)

--- a/public/styles.css
+++ b/public/styles.css
@@ -42,6 +42,24 @@
     object-fit: contain;
 }
 
+.carousel-control-next {
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.carousel-control-prev {
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
 #imageCarouselModal .carousel-control-prev,
 #imageCarouselModal .carousel-control-next {
     background-color: rgba(0, 0, 0, 0.4);
